[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.9,<2.10",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/dstampfli/nano-vllm"

# flash-attn 2.8.3 has no prebuilt wheel for torch 2.12/CUDA 13 and won't compile
# from source against CUDA 13 on glibc 2.41+. Pin torch to 2.9 (CUDA 12) and pull
# the matching prebuilt cu12 wheel directly so nothing has to compile.
[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
